--- a/PostMishone/Main.storyboard
+++ b/PostMishone/Main.storyboard
@@ -781,6 +781,15 @@
                                     <action selector="updateMission:" destination="zRr-5P-oA1" eventType="touchUpInside" id="UaS-MC-WWg"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KcW-CH-6cr">
+                                <rect key="frame" x="153" y="410" width="60" height="14"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Payment"/>
+                                <connections>
+                                    <action selector="PaymentPress:" destination="zRr-5P-oA1" eventType="touchUpInside" id="ap2-Nt-Y30"/>
+                                    <segue destination="lDg-TD-h8Q" kind="show" id="ZHq-Ei-wYd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="RkY-uR-7bb"/>
@@ -793,7 +802,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AWU-cu-bsc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4616.8000000000002" y="323.38830584707648"/>
+            <point key="canvasLocation" x="4616.8000000000002" y="322.90640394088672"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="dkj-te-666">
@@ -888,6 +897,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xar-8Z-76C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1796" y="-404.34782608695656"/>
+        </scene>
+        <!--Payment View Controller-->
+        <scene sceneID="p1e-UJ-LVy">
+            <objects>
+                <viewController id="lDg-TD-h8Q" customClass="PaymentViewController" customModule="PostMishone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MSP-eF-ClO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dIk-xi-sFh">
+                                <rect key="frame" x="154" y="308" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="pay"/>
+                                <connections>
+                                    <action selector="paypress:" destination="lDg-TD-h8Q" eventType="touchUpInside" id="c2P-jx-PhI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Hy4-t7-5JA"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DBD-Gl-r1O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5292" y="-213.54679802955667"/>
         </scene>
     </scenes>
     <resources>
